slight alignment issue for non special pricing fixed

--- a/skin/frontend/default/clairsoft/css/local.css
+++ b/skin/frontend/default/clairsoft/css/local.css
@@ -626,28 +626,29 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
     position: absolute;
     padding: 0;
     margin: 3px 0 0 0px;
-    width: 100%;
-    text-align: center; }
-    /* line 148, ../sass/products_grid.scss */
+    width: 100px;
+    text-align: center;
+    height: auto;
+    left: 90px; }
+    /* line 151, ../sass/products_grid.scss */
     .cms-index-index .price-box .special-price .price-default, .cms-index-index .price-box .regular-price .price-default, .category-products .price-box .special-price .price-default, .category-products .price-box .regular-price .price-default {
       font-size: 30px;
       font-weight: bold; }
-    /* line 153, ../sass/products_grid.scss */
+    /* line 156, ../sass/products_grid.scss */
     .cms-index-index .price-box .special-price .more-than-three, .cms-index-index .price-box .regular-price .more-than-three, .category-products .price-box .special-price .more-than-three, .category-products .price-box .regular-price .more-than-three {
       font-size: 25px;
       margin-left: -5px;
       font-weight: bold; }
-    /* line 159, ../sass/products_grid.scss */
+    /* line 162, ../sass/products_grid.scss */
     .cms-index-index .price-box .special-price .more-than-six, .cms-index-index .price-box .regular-price .more-than-six, .category-products .price-box .special-price .more-than-six, .category-products .price-box .regular-price .more-than-six {
       font-size: 20px;
-      margin-left: -18px;
       font-weight: bold; }
-    /* line 165, ../sass/products_grid.scss */
+    /* line 168, ../sass/products_grid.scss */
     .cms-index-index .price-box .special-price .free-price, .cms-index-index .price-box .regular-price .free-price, .category-products .price-box .special-price .free-price, .category-products .price-box .regular-price .free-price {
       font-size: 30px;
       margin-left: -5px;
       font-weight: bold; }
-  /* line 172, ../sass/products_grid.scss */
+  /* line 175, ../sass/products_grid.scss */
   .cms-index-index .price-box .msrp, .category-products .price-box .msrp {
     font-size: 14px;
     color: #1b75bb;
@@ -656,11 +657,11 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
     top: 40px;
     text-align: center;
     font-style: italic;
-    margin: 3px 0 0 -12px; }
-    /* line 182, ../sass/products_grid.scss */
+    margin: 3px 0 0 0px; }
+    /* line 185, ../sass/products_grid.scss */
     .cms-index-index .price-box .msrp .price, .category-products .price-box .msrp .price {
       font-weight: normal; }
-  /* line 188, ../sass/products_grid.scss */
+  /* line 191, ../sass/products_grid.scss */
   .cms-index-index .price-box .percent-off, .category-products .price-box .percent-off {
     background: url(../images/percentoffbg.png) no-repeat;
     width: 100px;
@@ -668,30 +669,30 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
     margin: 0px 0 0 -9px;
     color: white !important;
     position: absolute; }
-    /* line 199, ../sass/products_grid.scss */
+    /* line 202, ../sass/products_grid.scss */
     .cms-index-index .price-box .percent-off span, .category-products .price-box .percent-off span {
       display: block;
       text-align: center;
       width: 90px; }
-    /* line 206, ../sass/products_grid.scss */
+    /* line 209, ../sass/products_grid.scss */
     .cms-index-index .price-box .percent-off span:first-child, .category-products .price-box .percent-off span:first-child {
       padding-top: 1.4em;
       padding-bottom: 0;
       margin-bottom: -5px;
       font-size: 11px; }
-    /* line 213, ../sass/products_grid.scss */
+    /* line 216, ../sass/products_grid.scss */
     .cms-index-index .price-box .percent-off span:nth-child(2), .category-products .price-box .percent-off span:nth-child(2) {
       font-size: 26px;
       padding-top: 0;
       margin-top: 0; }
-  /* line 220, ../sass/products_grid.scss */
+  /* line 223, ../sass/products_grid.scss */
   .cms-index-index .price-box .no-percent, .category-products .price-box .no-percent {
     background: none; }
-/* line 225, ../sass/products_grid.scss */
+/* line 228, ../sass/products_grid.scss */
 .cms-index-index .actions, .category-products .actions {
   position: relative;
   bottom: 0px; }
-  /* line 234, ../sass/products_grid.scss */
+  /* line 237, ../sass/products_grid.scss */
   .cms-index-index .actions a.view-deal-btn, .category-products .actions a.view-deal-btn {
     float: right;
     border: 1px solid #cccccc !important;
@@ -707,7 +708,7 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
     margin: 10px 10px 0 0;
     position: relative;
     z-index: 97; }
-    /* line 251, ../sass/products_grid.scss */
+    /* line 254, ../sass/products_grid.scss */
     .cms-index-index .actions a.view-deal-btn:hover, .category-products .actions a.view-deal-btn:hover {
       border: 1px solid #1b75bb;
       text-decoration: none;
@@ -716,7 +717,7 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
       background-image: -moz-linear-gradient(#3d89c5, #1b75bb);
       background-image: -webkit-linear-gradient(#3d89c5, #1b75bb);
       background-image: linear-gradient(#3d89c5, #1b75bb); }
-  /* line 261, ../sass/products_grid.scss */
+  /* line 264, ../sass/products_grid.scss */
   .cms-index-index .actions a.soldout-btn, .category-products .actions a.soldout-btn {
     float: right;
     border: 1px solid #cccccc !important;
@@ -741,22 +742,22 @@ input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
       background-image: -webkit-linear-gradient(#3d89c5, #1b75bb);
       background-image: linear-gradient(#3d89c5, #1b75bb); }
 
-/* line 270, ../sass/products_grid.scss */
+/* line 273, ../sass/products_grid.scss */
 .col1-layout .products-grid {
   margin: 0;
   width: 960px;
   padding: 0; }
-  /* line 275, ../sass/products_grid.scss */
+  /* line 278, ../sass/products_grid.scss */
   .col1-layout .products-grid .product-image {
     height: 310px;
     width: 310px; }
 
-/* line 282, ../sass/products_grid.scss */
+/* line 285, ../sass/products_grid.scss */
 .category-title {
   border-bottom: 1px solid #cccccc !important;
   padding-bottom: 0px;
   margin-bottom: 12px; }
-  /* line 288, ../sass/products_grid.scss */
+  /* line 291, ../sass/products_grid.scss */
   .category-title h1 {
     font-size: 30px;
     border-bottom: 3px solid #cccccc !important;
