--- a/skin/frontend/default/clairsoft/sass/products_grid.scss
+++ b/skin/frontend/default/clairsoft/sass/products_grid.scss
@@ -142,8 +142,11 @@
 			position: absolute;
 			padding: 0;
 			margin: 3px 0 0 0px;
-			width: 100%;
+			width: 100px;
 			text-align: center;
+			height: auto;
+			left: 90px;
+
 
 			.price-default{
 				font-size: 30px;
@@ -158,7 +161,7 @@
 
 			.more-than-six{
 				font-size: 20px;
-				margin-left: -18px;
+				//margin-left: -18px;
 				font-weight: bold;
 			}
 
@@ -177,7 +180,7 @@
 			top: 40px;
 			text-align: center;
 			font-style: italic;
-			margin: 3px 0 0 -12px;
+			margin: 3px 0 0 0px;
 
 			.price{
 				font-weight: normal;
